update code to work for jdk 14